- edit register layout - create Input, Gap, Button, and Link atom components - create styling in scss

--- a/src/pages/Register/register.scss
+++ b/src/pages/Register/register.scss
@@ -1,12 +1,13 @@
 .main-page{
   display: flex;
   height: 100vh;
+  box-sizing: border-box;
 }
 
 .left{
   // width: 100%;
   flex: 1;
-  background-color: red;
+  // background-color: red;
   height: 100%;
 
   img.bg-image{
@@ -17,7 +18,14 @@
 }
 
 .right{
-  background-color: blue;
-  width: 460px;
+  background-color: whitesmoke;
+  width: 350px;
   height: 100%;
+  padding: 0 30px;
+
+  .title{
+    font-size: 18px;
+    font-weight: bold;
+    color: #2D2D2D;
+  }
 }
